--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: jSYBlVSwdXYHq+ETlyty4g
+# Checksum: XNw886UxG3fcSoeteSsLWA
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1058,6 +1058,7 @@
 .sex-techniques-and-positions.com/banners1a1/
 .sex-techniques-and-positions.com/banners2/
 .sexcounter.
+.sexkiste.com/banner/
 .sexlist.com
 .sexplaycam.com/geobanners/
 .sexplaycam.com/geoprofiles/
@@ -3633,6 +3634,7 @@ http://wrapper.ign.com/
 http://www.4link.it/banners/
 http://www.adulttubetraffic.com
 http://www.afterdownload.com/
+http://www.cam4flat.com/banner/
 http://www.farmholidays.is/IFrameAll
 http://www.fileporn.org/aff/
 http://www.fordforums.com.au/banner.swf
