--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XNw886UxG3fcSoeteSsLWA
+# Checksum: FvZv3XnSMnwCG+szrhg8hg
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -266,6 +266,7 @@
 .allotraffic.
 .allyes.com/
 .alphagodaddy.com/
+.amateurseite.com/banner/
 .amazon.co.uk/widgets/
 .amazon.com/e/cm?t
 .amazon.com/widgets/
