--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: FvZv3XnSMnwCG+szrhg8hg
+# Checksum: g34y5V+0XuaYx8LitFHw3Q
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -377,6 +377,7 @@
 .cam-lolita.net/index.php?
 .cam4.com/banners/
 .cam4.com/images/awebanner
+.cam4flat.com/banner/
 .camcrush.com/exports/
 .camelmedia.net/thumbs/
 .camsense.com/live/code.
