--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: g34y5V+0XuaYx8LitFHw3Q
+# Checksum: Hz1rHvybazr8NeRTIzGBvA
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -169,6 +169,7 @@
 .adoptim.com/
 .adotic.com/
 .adotomy.com/
+.adpaths.com/_aspx/cpcinclude.aspx?
 .adparad.net/
 .adphreak.com/
 .adpinion.
