--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -1,6 +1,7 @@
 # Indian (Iron-Chrome)
 .admagnet.net/
 .axill.in/
+.co.uk/advt/
 .com/bAds/
 .com/player/ads/
 .economictimes.indiatimes.com/google_
