--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -7,6 +7,7 @@
 .com/player/ads/
 .economictimes.indiatimes.com/google_
 .netklix.com/
+.sensongs.com/NFls/
 .tamilisai.net/pub.
 /banner728x90
 /logger.cgi?
