--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -16,6 +16,7 @@
 /PhotoGallaryAds.
 /reghit.asp?
 /trackdirect.php?
+/trackLT.asp?
 http://www.lankasri.eu/clients/
 http://www.musicmaza.com/banner
 http://www.smashitsusa.com/bottombanner
