--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Hz1rHvybazr8NeRTIzGBvA
+# Checksum: 8y7VzFCnW7shs+1U+KnWVw
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2335,6 +2335,7 @@
 /plugins/oiopub-direct/
 /plugins/page-cornr
 /plugins/wp_actionpop/
+/plugins/wp125/
 /popAds.
 /portal_assets/
 /ppd_ads.php?
