--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 8y7VzFCnW7shs+1U+KnWVw
+# Checksum: bE7X8ZggWF5vebCcUwv4Wg
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -272,6 +272,7 @@
 .amazon.com/e/cm?t
 .amazon.com/widgets/
 .amazonaws.com/widget/
+.assoc-amazon.co.uk/
 .amgdgt.com/
 .ampxchange.com/
 .andomedia.com/ufo.js
