--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -6,6 +6,7 @@
 .com/images/advt/
 .com/player/ads/
 .economictimes.indiatimes.com/google_
+.in/ads/
 .netklix.com/
 .sensongs.com/NFls/
 .tamilisai.net/pub.
