--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: bE7X8ZggWF5vebCcUwv4Wg
+# Checksum: ZA2J9Dy4piCG0vLfllo+oA
 # Updated: 4 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1293,6 +1293,7 @@
 .yzrnur.com/
 .zangocash.com/
 .zazzle.com/utl/getpanel?
+.zde-engage.com/
 .zdnet.de/ads/
 .zedo.com/
 .zeenews.com/ad.htm
