--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -9,9 +9,11 @@
 .in/ads/
 .netklix.com/
 .sensongs.com/NFls/
+.songs.pk/125body.
 .tamilisai.net/pub.
 .vdopia.com/
 /banner728x90
+/bodyads/
 /logger.cgi?
 /peel_ads
 /photoad.
