--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -428,6 +428,7 @@
 .online-metrix.net/
 .onlinewebstat.
 .ooyala.com/errors/report?log
+.ooyala.com/modules/analytics-
 .open.ua/stat/
 .openhit.com/
 .opentracker.net/
