--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -8,6 +8,7 @@
 .com/player/ads/
 .economictimes.indiatimes.com/google_
 .in/ads/
+.monsoonads.
 .net-filter.com/
 .netklix.com/
 .sensongs.com/NFls/
