--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ZA2J9Dy4piCG0vLfllo+oA
-# Updated: 4 Aug 2010
+# Checksum: ooV19lv5gW5XuANbs9qzRQ
+# Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1981,7 +1981,8 @@
 /deliverjs.nmi
 /delivery/afr.
 /delivery/ag
-/delivery/spc.php?
+/delivery/avw.
+/delivery/spc.
 /dif/?cid
 /direct_ads.js?
 /display-ads/
