--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ooV19lv5gW5XuANbs9qzRQ
+# Checksum: ifPCoAiabh3Et4r+0hmLNA
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1051,7 +1051,6 @@
 .s2d6.com/
 .sankakucomplex.com/img/www/
 .sbs-ad.com/
-.scanscout.com/
 .scoop.co.nz/xl?c
 .se/adx.js
 .searchfeed.
@@ -1679,6 +1678,7 @@
 /ads/Banner
 /ads/banner
 /ads/click_
+/ads/dhtml/
 /ads/freewheel/
 /ads/generator/
 /ads/html/
@@ -1766,6 +1766,7 @@
 /AdsTemplate/
 /adstop.
 /adstorage.
+/adStreamJSController.
 /adstubs/
 /adSwap.js
 /adsWrapper.js
