--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ifPCoAiabh3Et4r+0hmLNA
+# Checksum: KLsmktLqsqq3/i4Os5sL8A
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2540,6 +2540,7 @@
 /vghd.gif
 /vghd.swf
 /vghd2.gif
+/VideoAdRenderer.
 /view.php?ad_id
 /view/banner/
 /view_banner.asp?
