--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -375,6 +375,7 @@
 .measuremap.
 .media6degrees.
 .mediatracker.co.nz/
+.metricsdirect.com/
 .megastat.net/
 .met.vgwort.de/na/
 .metacafe.com/debugToSysLog.
@@ -685,6 +686,7 @@
 .youramigo.com/
 .youtube.com/tracker
 .ytmnd.com/assets/images/blank.gif
+.zroitracker.com/
 /0pixel.php?
 /1.1/1.gif?
 /1/s.gif?
