--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KLsmktLqsqq3/i4Os5sL8A
+# Checksum: ofp4ur9Jj+JryMyxHlXWMA
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1000,6 +1000,7 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
+.pornprosnetwork.com/affiliates/
 .pornoprinzen.com/banners_
 .porntrack.com/
 .ppc-direct.
