--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: ofp4ur9Jj+JryMyxHlXWMA
+# Checksum: /1s2Uelgy1yVNSZ6qTBm0A
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3248,6 +3248,7 @@ http://au2m8.com/
 http://av.ctnetwork.hu/?
 http://b.scorecardresearch.
 http://babes.picrush.com/
+http://babesmachine.com/html/
 http://banaad.
 http://banman.
 http://banner-clix.com/
