--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: /1s2Uelgy1yVNSZ6qTBm0A
+# Checksum: nBmflqrDUmCa4eSQdR2Ncw
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -381,6 +381,7 @@
 .cam4.com/images/awebanner
 .cam4flat.com/banner/
 .camcrush.com/exports/
+.camduty.com/
 .camelmedia.net/thumbs/
 .camsense.com/live/code.
 .camsitecash.com/
