--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: nBmflqrDUmCa4eSQdR2Ncw
+# Checksum: x/aZoFBJjy9OrLJkuXlaxA
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1812,6 +1812,7 @@
 /adx.js
 /adx/gamestar.
 /adx2.js
+/adworldmedia/
 /aff-exchange/
 /aff.htm
 /aff.html
