--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: x/aZoFBJjy9OrLJkuXlaxA
+# Checksum: 5QnlB6KRv9fgJn0yJrp58Q
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1782,6 +1782,7 @@
 /adtagtc.
 /AdTech.
 /ADTECH;
+/adtext.
 /adtext4
 /adtext_vert
 /adtomo/www/
