--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 5QnlB6KRv9fgJn0yJrp58Q
+# Checksum: +nH3RJIiq1qdFU+Zpb4wZA
 # Updated: 6 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1783,6 +1783,7 @@
 /AdTech.
 /ADTECH;
 /adtext.
+/adttext.
 /adtext4
 /adtext_vert
 /adtomo/www/
