--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -127,6 +127,7 @@
 /imagens.climatempo.com.br/site/imagens/bg_
 /imgcontador.php?
 /ml.track.me?p=
+/publi.js
 /promocao-
 /publitab.
 /publicidad-
