--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -12,6 +12,7 @@
 .belasmensagens.com.br/posthaus
 .bilibio.com.br/fotoBanner/
 .blog.br/action/tools/coMesWin
+.br/adx.js
 .br/afiliados/
 .br/banner.aspx?
 .br/banners/
@@ -156,6 +157,7 @@ http://ads.periodistadigital.com/
 http://ads.gazetaesportiva.net/
 http://ads.prisacom.com/
 http://ads.mercadoclics.com/
+http://ads.dgabcsolutions.com.br/
 http://ads.xl.pt/
 http://ads.terra.es/
 http://adw.
