--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -17,6 +17,7 @@
 .br/banner.aspx?
 .br/banners/
 .br/imagensdb/banners/
+.br/publicidad
 .br/swf/banners/
 .buscape.com.br/skin/
 .cadenaser.com/est.pl?
