--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -55,6 +55,7 @@
 .es/Cnt2/
 .es/imagenesDDN/banners/
 .es/traffic/?
+.finalsports.com.br/03/boo_box.
 .guiadasemana.com.br/images/tit_pub_
 .gazetaesportiva.net/js/banners/
 .globalasia.es/images/banners/
