--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -94,6 +94,7 @@
 .publipagos.com/
 .rankia.com/promo
 .record.xl.pt/rec/i/pub
+.record.xl.pt/pub/
 .sapo.pt/banner.swf
 .sapo.pt/images_banner/
 .sapo.pt/t2.asp
@@ -129,6 +130,7 @@
 /img_banner/
 /imagens.climatempo.com.br/site/imagens/bg_
 /imgcontador.php?
+/mrec.aspx?
 /ml.track.me?p=
 /publi.js
 /promocao-
