--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -49,6 +49,7 @@
 .eladelantado.com/imagenes/banner
 .elmundo.es/banners
 .elotrolado.net/styles/estiloeol/imageset/banner_
+.elimpulsohost.com/BannerImpulso/
 .elreloj.com/nkads/
 .epartner.es/
 .es/Cnt/
