--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -269,6 +269,7 @@
 .google-analytics.com/ga.js?jsonp
 .google-analytics.com/siteopt.js?
 .google.com/gwt/x/ts?
+.googlelabs.com/log/
 .googleusercontent.com/tracker/
 .gosquared.com/
 .gostats.com/
