--- a/easylistfanboy/iron/adblock-vtn.ini
+++ b/easylistfanboy/iron/adblock-vtn.ini
@@ -68,6 +68,7 @@ http://yeah1.com/images/banners/
 .vn/log.aspx?
 /24h-analytics.
 /rpc/counter.aspx?
+/tmpUpdateViewcount.
 http://210.245.86.205/
 http://222.255.31.205
 http://reporting.nld.com.vn/
