--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -505,6 +505,7 @@
 .richrelevance.
 .ritecounter.
 .roiservice.com/track/
+.rottentomatoes.com/tracking/
 .rsvpgenius.com/
 .ru/stat/?
 .ru/top100.
