--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -54,6 +54,7 @@
 .com/pv.gif?
 .datamaster.com.cn/
 .emarketing.com.cn/
+.emedia.cn/
 .feizl.com/ben/ben
 .focus.cn/fad/
 .gamania.com/ad
@@ -79,6 +80,7 @@
 .ku6.com/script/ktrace/ktrace-
 .ku6.com/taobaojs/
 .lemao.cn/blueidea/
+.mediav.com/
 .miaozhen.
 .mingpao.com/js/Adv/
 .mingpao.com/js/Keywords
@@ -228,6 +230,7 @@ http://dotnet.chinaitlab.
 http://drmcmm.baidu.com/media/
 http://dvs.china.com/
 http://eiv.baidu.com/
+http://fun.ynet.com/
 http://g.163.com/
 http://gg.blueidea.
 http://goto.www.iciba.com/
