--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: +nH3RJIiq1qdFU+Zpb4wZA
-# Updated: 6 Aug 2010
+# Checksum: Nlrj2LUjAiS8L7ur1Ljgrw
+# Updated: 8 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -541,7 +541,6 @@
 .ecom.js
 .ecommerce-journal.com/specdata.php?
 .edge.ru4.
-.edgecastcdn.net/
 .egghelp.org/images/misc/
 .ehow.com/images/brands/
 .ejb.com/300_
