--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -50,6 +50,7 @@
 .sporx.com/i/sx_
 .superpoligon.com/tracker
 .techno-labs.com/banner/
+.takvim.com.tr/banner/
 .tr/_js/adnet
 .tr/adserver
 .tr/images/banners/
@@ -96,6 +97,8 @@ http://ad.zaman.com.tr/
 http://ads.adport.com.tr/
 http://ads.gercekgundem.com/
 http://ads.oyungemisi.com/
+http://adserver.adklik.com.tr/
+http://ads.ihaberadserver.com/
 http://aff2.gittigidiyor.com/
 http://aff3.gittigidiyor.com/
 http://divxm.com/images/elma728
