--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -77,6 +77,7 @@
 /banner/reklam-
 /Banners/Sponsored
 /ebulten/ebulten_
+/incereklam.
 /leftreklam
 /MainPage/NDBanners/
 /reklam.swf
@@ -84,6 +85,7 @@
 /reklam_
 /reklam1.swf
 /renklam/
+/reklamver.
 /rightreklam
 /todayszaman/banners/
 _reklam_125_
