--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -60,6 +60,7 @@
 .tr/medya.php?mn=32760
 .tr/reklamlar/
 .tr/Statistic/
+.trt.net.tr/flash/
 .tumgazeteler.com/?cat
 .turizmhaberleri.com/img/banner/
 .turkticaret.net/ads/
