--- a/easylistfanboy/iron/adblock-trk.ini
+++ b/easylistfanboy/iron/adblock-trk.ini
@@ -17,6 +17,7 @@
 .emlakkulisi.com/Banner
 .gazetevatan.com/adv_
 .gazetevatan.com/resimler/rightbanner
+.haberdiyarbakir.com/images/banner/
 .habervaktim.com/1453
 .habervaktim.com/hvreklam/
 .habervaktim.com/rd.swf
