--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Nlrj2LUjAiS8L7ur1Ljgrw
+# Checksum: kyksPetTbzL4DjsH5vvNww
 # Updated: 8 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2232,6 +2232,7 @@
 /layer.php?bid
 /layer/layer.js
 /layout.inc.php?img
+/LinkedAds/
 /leftads.
 /leftbanner/
 /lifeshowad/
