--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kyksPetTbzL4DjsH5vvNww
+# Checksum: iHwxu/pLCoLOHTj7A7G4IA
 # Updated: 8 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -555,7 +555,6 @@
 .ero-advertising.com
 .erosadv.com/
 .erotikdating.com/
-.espn.go.com/ads/
 .etargetnet.com/generic/generic.php?
 .etology.
 .euro-rx.com/
