--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 79+aLYhZrv/Dm4e0HkklcA
+# Checksum: iHwxu/pLCoLOHTj7A7G4IA
 # Updated: 8 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3355,7 +3355,6 @@ http://engine.awaps.net/
 http://engine.theloungenet.com/
 http://enoratraffic.com/
 http://erotizer.info/iframe.
-http://espn.vad.go.com/DynamicVideoAd
 http://euro4ads.de/
 http://exchangecash.de/
 http://exit.macandbumble.com/
