--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: iHwxu/pLCoLOHTj7A7G4IA
-# Updated: 8 Aug 2010
+# Checksum: kY0Al6ARYJTGmgyMcTN4Ng
+# Updated: 11 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -158,6 +158,7 @@
 .admaxserver.com/
 .adme.ru/
 .admeld.com/
+.admonkey.dapper.net/
 .admeta.
 .adminder.
 .admob.com/
