--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: kY0Al6ARYJTGmgyMcTN4Ng
+# Checksum: JD0Hk8Lho6rfLkiIra1zew
 # Updated: 11 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -627,6 +627,7 @@
 .g-cash.biz/banner/
 .g.doubleclick.
 .g4whisperermedia.
+.gamemakerblog.com/gma/gatob.
 .game-advertising-online.
 .gameads.com/
 .gamecetera.com/show/
