--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: JD0Hk8Lho6rfLkiIra1zew
-# Updated: 11 Aug 2010
+# Checksum: Tc1T3d4t4YNK88DM8uHDBw
+# Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1458,7 +1458,6 @@
 /ad-vertical
 /ad.asp?
 /ad.aspx?
-/ad.au.doubleclick.net/
 /ad.gif?
 /ad.html?
 /ad.php3?
@@ -3045,6 +3044,7 @@ http://ad.blog.
 http://ad.bnmla.com/
 http://ad.ca.doubleclick.net/ad
 http://ad.de.doubleclick.net/ad/
+http://ad.au.doubleclick.net/ad
 http://ad.doubleclick.net/ad/
 http://ad.doubleclick.net/N4675/
 http://ad.doubleclick.net/pfadx/
