--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Tc1T3d4t4YNK88DM8uHDBw
+# Checksum: C0nm2edti/Xvp0USlDm8Sg
 # Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1842,7 +1842,6 @@
 /api/ads/
 /app/bbccom/
 /ArtiMediaTargetAds.swf
-/AS3AdPlayer.
 /as_u/ads/
 /aseadnshow.js
 /assets/ad/
