--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: C0nm2edti/Xvp0USlDm8Sg
-# Updated: 12 Aug 2010
+# Checksum: 2KRxF66pOI1Mp9Lv8Sf2VQ
+# Updated: 11 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -158,10 +158,10 @@
 .admaxserver.com/
 .adme.ru/
 .admeld.com/
-.admonkey.dapper.net/
 .admeta.
 .adminder.
 .admob.com/
+.admonkey.dapper.net/
 .admpads.com/
 .adnet.de/
 .adnet.vn/
@@ -170,8 +170,8 @@
 .adoptim.com/
 .adotic.com/
 .adotomy.com/
-.adpaths.com/_aspx/cpcinclude.aspx?
 .adparad.net/
+.adpaths.com/_aspx/cpcinclude.aspx?
 .adphreak.com/
 .adpinion.
 .adpionier.
@@ -273,7 +273,6 @@
 .amazon.com/e/cm?t
 .amazon.com/widgets/
 .amazonaws.com/widget/
-.assoc-amazon.co.uk/
 .amgdgt.com/
 .ampxchange.com/
 .andomedia.com/ufo.js
@@ -289,6 +288,7 @@
 .askjolene.com/endroll.php?
 .asp?coad
 .assoc-amazon.
+.assoc-amazon.co.uk/
 .astrolabio.
 .at.atwola.com/
 .atwola.com/addyn/
@@ -627,11 +627,11 @@
 .g-cash.biz/banner/
 .g.doubleclick.
 .g4whisperermedia.
-.gamemakerblog.com/gma/gatob.
 .game-advertising-online.
 .gameads.com/
 .gamecetera.com/show/
 .gamecopyworld.com/games/!_
+.gamemakerblog.com/gma/gatob.
 .gamersbanner.
 .garvmedia.
 .gestionpub.
@@ -1001,8 +1001,8 @@
 .pornbb.org/adsnov.
 .pornbb.org/images/rotation/
 .pornbb.org/posts_ad.
-.pornprosnetwork.com/affiliates/
 .pornoprinzen.com/banners_
+.pornprosnetwork.com/affiliates/
 .porntrack.com/
 .ppc-direct.
 .precisionclick.
@@ -1593,6 +1593,7 @@
 /AdHandler.
 /adhandler/
 /AdHandlers
+/adHeader
 /adheader.
 /adhug_jc.
 /adiframe.aspx?
@@ -1782,12 +1783,12 @@
 /AdTech.
 /ADTECH;
 /adtext.
-/adttext.
 /adtext4
 /adtext_vert
 /adtomo/www/
 /adtool/
 /adtrack
+/adttext.
 /adunit.
 /adunitt
 /adv.asp?
@@ -1810,10 +1811,10 @@
 /AdvScript.
 /advscripts/
 /AdWorks/
+/adworldmedia/
 /adx.js
 /adx/gamestar.
 /adx2.js
-/adworldmedia/
 /aff-exchange/
 /aff.htm
 /aff.html
@@ -2231,10 +2232,10 @@
 /layer.php?bid
 /layer/layer.js
 /layout.inc.php?img
-/LinkedAds/
 /leftads.
 /leftbanner/
 /lifeshowad/
+/LinkedAds/
 /lit.lite.js
 /liveAds.
 /livejasmin.js
@@ -2342,8 +2343,8 @@
 /plcornerswf.swf?
 /plugins/oiopub-direct/
 /plugins/page-cornr
-/plugins/wp_actionpop/
 /plugins/wp125/
+/plugins/wp_actionpop/
 /popAds.
 /portal_assets/
 /ppd_ads.php?
@@ -3038,12 +3039,12 @@ http://aaa.at4.info/
 http://ad-clicks.com/
 http://ad.336698.cn/
 http://ad.adriver.ru/
+http://ad.au.doubleclick.net/ad
 http://ad.be.doubleclick.net/ad/
 http://ad.blog.
 http://ad.bnmla.com/
 http://ad.ca.doubleclick.net/ad
 http://ad.de.doubleclick.net/ad/
-http://ad.au.doubleclick.net/ad
 http://ad.doubleclick.net/ad/
 http://ad.doubleclick.net/N4675/
 http://ad.doubleclick.net/pfadx/
