--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2KRxF66pOI1Mp9Lv8Sf2VQ
-# Updated: 11 Aug 2010
+# Checksum: uXRcnWPTabN6BlK8DnI2xw
+# Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1667,6 +1667,7 @@
 /ads.pl?
 /ads.w3c.
 /ADS/
+/ads/2010/
 /ads/300x300_
 /ads/a.aspx?
 /ads/acctid
