--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: uXRcnWPTabN6BlK8DnI2xw
+# Checksum: MwjuXIy4YAdfuXtKOTCgLA
 # Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -87,6 +87,10 @@
 .777seo.com/
 .7insight.com/
 .7search.com/
+.adglamour.net/
+.ads01.com/
+.advertrev.com/
+.registry.cw.cm/
 .a2dfp.net/
 .a8.net/
 .abnad.net/
