--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Inl7hAG4maZnYTFl2kTOqg
+# Checksum: MwjuXIy4YAdfuXtKOTCgLA
 # Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3600,7 +3600,6 @@ http://static.thebigchair.com.au
 http://static.wildcammy.com/
 http://static.zangocash.
 http://stats-analytics.info/
-http://statsrv.451.com/
 http://stats.buzzparadise.
 http://stocker.bonnint.
 http://store.androidcommunity.com/external_marketing/
