--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0EStjmksKiDEUNEjpxnPtQ
+# Checksum: RYreM6ewZw7OGofiTTNRXQ
 # Updated: 12 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3253,7 +3253,7 @@ http://anonymouse.org/ad
 http://anzeigen
 http://appbodega.com/Promos/
 http://armorgames.com/misc/banners/
-http://asiafriendfinder.com/
+http://asiafriendfinder.com/go/
 http://athena-ads.
 http://au2m8.com/
 http://av.ctnetwork.hu/?
