--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: G/Zi5uP9RlI0Kqd51B1N+g
-# Updated: 12 Aug 2010
+# Checksum: 1yAQGbRQTEG7BXNm+0Ev8Q
+# Updated: 13 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1254,6 +1254,7 @@
 .wibiya.com/toolbarLoader.php?
 .widgetbucks.
 .wildamaginations.com/mdm/
+.wcpanalytics.com/
 .worldmag.com/images/media/
 .worldsex.com/c/
 .ws/banners/
