--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: G/Zi5uP9RlI0Kqd51B1N+g
-# Updated: 12 Aug 2010
+# Checksum: CfF6sN8B9T18I4VV8uuIlg
+# Updated: 13 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1671,7 +1671,6 @@
 /ads.pl?
 /ads.w3c.
 /ADS/
-/ads/2010/
 /ads/300x300_
 /ads/a.aspx?
 /ads/acctid
