--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -25,6 +25,7 @@
 /PhotoGallaryAds.
 /ranks.cgi?ID=
 /reghit.asp?
+/stats.php?
 /trackdirect.php?
 /trackLT.asp?
 http://thinakkural.com/web_advers/
