--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -10,6 +10,8 @@
 .com/player/ads/
 .economictimes.indiatimes.com/google_
 .in/ads/
+.indiadaily.com/editorial/leaderboard.
+.indiadaily.com/leaderboard.
 .monsoonads.
 .net-filter.com/
 .netklix.com/
@@ -19,6 +21,7 @@
 .vdopia.com/
 /banner728x90
 /bodyads/
+/left_ads.
 /logger.cgi?
 /peel_ads
 /photoad.
