--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 2GcpyndBXyhv28cnXS2Z1A
+# Checksum: TXX0fOh3htXkrDDxRBAG2A
 # Updated: 13 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -950,6 +950,7 @@
 .oneclicktube.com/hover.
 .onenetworkdirect.
 .onhercam.com/dev/banners/
+.onlinerealgames.com/google
 .onlymelbourne.com.au/image/banner
 .openx.com/
 .openx.org/
@@ -1241,6 +1242,7 @@
 .w3exit.com/
 .wamcash.com/wcalertas/
 .watchmygf.com/preview/
+.wcpanalytics.com/
 .webads.nl/
 .webmasterlounge.
 .webmasterplan.
@@ -1254,7 +1256,6 @@
 .wibiya.com/toolbarLoader.php?
 .widgetbucks.
 .wildamaginations.com/mdm/
-.wcpanalytics.com/
 .worldmag.com/images/media/
 .worldsex.com/c/
 .ws/banners/
