--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -244,6 +244,7 @@ _news_cnt.
 .koreaherald.co.kr/khjs/banner/
 .koreatimes.co.kr/www/events/
 .kormedi.com/banner/
+.kormedi.com/uploadfiles/orgfiles/main/
 .kpanews.co.kr/images/sub/banner
 .kr/ad.js
 .kr/ads/
@@ -512,7 +513,7 @@ _news_cnt.
 /event_call.htm?
 /file.veritasmgosi.co.kr/
 /flashAd.js
-/GetAdInfo.aspx?
+/GetAdInfo.
 /golfplus.golfsky.com/main_golfshop.asp
 /google_keywui.js
 /hbbs.hangame.com/poll.nhn?
