--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -513,6 +513,7 @@ _news_cnt.
 /event_call.htm?
 /file.veritasmgosi.co.kr/
 /flashAd.js
+/GetAdBnCont.
 /GetAdInfo.aspx?
 /golfplus.golfsky.com/main_golfshop.asp
 /google_keywui.js
