--- a/easylistfanboy/iron/adblock-krn.ini
+++ b/easylistfanboy/iron/adblock-krn.ini
@@ -888,6 +888,7 @@ http://yesapt.com/banner/
 /imp_count.cgi?
 /implog2.auction.co.kr/
 /impsearch1.auction.co.kr/
+/inc_news_cnt_
 /inc_statics.php?
 /javascript/ems.js
 /javascript/wlo.js
