--- a/easylistfanboy/iron/adblock-jpn.ini
+++ b/easylistfanboy/iron/adblock-jpn.ini
@@ -114,6 +114,7 @@
 /img/bcn.gif?
 /jpn_gtracking.js
 /json/count?
+/js/ysad
 /mini_ads.php?
 /page_beacon.gif?
 /popIn.js
@@ -123,6 +124,7 @@
 /TextAD1.aspx
 /top/head_bnr
 /top/head_s_bnr
+/yaad.js
 _ds_adtag_
 http://18ban.jp/ad/
 http://203.183.90.6/
