--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: TXX0fOh3htXkrDDxRBAG2A
-# Updated: 13 Aug 2010
+# Checksum: cP2KVfYpZ17lA1m9B6uc3A
+# Updated: 14 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2950,6 +2950,7 @@ _generic_ad.
 _geobanner.
 _google_ad.
 _google_video_ads
+_headerad.
 _headline_ad.
 _hp_promo_
 _iad.html?
