--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -56,6 +56,7 @@
 .es/Cnt2/
 .es/imagenesDDN/banners/
 .es/traffic/?
+.elcorreo.com/acceso.php?
 .finalsports.com.br/03/boo_box.
 .gazetaesportiva.net/js/banners/
 .globalasia.es/images/banners/
