--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -89,6 +89,7 @@
 .ojo.com.pe/cargar.php?
 .ojo.com.pe/flash/
 .olhardireto.com.br/imgsite/banners/
+.planetup.com/
 .politraductor.com/images/12
 .portalms.com.br/banner/
 .probabilidades.net/
@@ -136,6 +137,7 @@
 /ml.track.me?p=
 /mrec.aspx?
 /promocao-
+/planetup_
 /publi.js
 /publicidad-
 /publicidad.
