--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -151,6 +151,7 @@ _fullbanner_balanca_
 _publicidad2.
 _publicidad_
 _publicidade.
+_publicitario.
 http://187.6.64.32/especialdenatal/home/produto_
 http://200.72.40.46/
 http://ac.viatecla.pt/?
