--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -89,6 +89,7 @@
 .ojo.com.pe/cargar.php?
 .ojo.com.pe/flash/
 .olhardireto.com.br/imgsite/banners/
+.laverdad.com/images/banner/
 .planetup.com/
 .politraductor.com/images/12
 .portalms.com.br/banner/
