--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -112,6 +112,7 @@
 .uol.com.br/flash/banner_
 .vooz.com.br/imagem/banners/
 .xl.pt/images/pub_banner_
+.yucatan.com.mx/cuponazo.
 .zap.com.br/parceiros/
 /_publicidad/
 /ad_tpl.php?
