--- a/easylistfanboy/iron/adblock-esp.ini
+++ b/easylistfanboy/iron/adblock-esp.ini
@@ -81,6 +81,7 @@
 .metaffiliation.com/
 .miau.pt/platform/banners
 .micodigo.com/
+.mx/ads/
 .ncs.es/banner/
 .net-empregos.com/images/Banners/
 .net.ar/ads/
