--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -71,6 +71,7 @@
 .hkheadline.com/rpromo/
 .hz0752.com/a/
 .icast.cn/
+.ifeng.com/count_
 .instrument.com.cn/g/
 .itopnetworks.
 .jfdaily.com/adintrs/
