--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -98,6 +98,7 @@
 .replays.net/fdsa/
 .scol.com.cn/images/banner
 .scol.com.cn/linkpic/
+.sdl.sg/s/blank/
 .sina.com.cn/ad/
 .sina.com.cn/v/iframe/
 .skycn.com/tuijianimg/
