--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -165,6 +165,7 @@
 /iAskeyword.
 /iaskkeywords.
 /ifensi_ads/
+/iFocusLocateAD
 /images/pvhit
 /images/ShowAdv
 /imagesa/banner
@@ -194,6 +195,7 @@
 /visitorInfo.js?
 /xilan_banner_
 /xilanad.
+_AdSame_
 _right_ads_
 _sidebar_ad.
 _souvv_ads.js
