--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -150,6 +150,7 @@
 /adj.php?
 /adpic.aspx?
 /adpolestar/
+/adservice/
 /all_content_ad_
 /chinaadclient.js
 /chinazhanad/
@@ -216,6 +217,10 @@ http://admatch.
 http://adphoto.
 http://adping.
 http://ads.china.com/
+http://aps1.jrjimg.cn/
+http://aps2.jrjimg.cn/
+http://aps3.jrjimg.cn/
+http://aps4.jrjimg.cn/
 http://adsfile.
 http://adtaobao.
 http://analy.
