--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -162,6 +162,7 @@
 /get_mood_count.
 /GetAdContent.aspx?
 /GetAdList
+/GetStats.
 /guanggao
 /iAskeyword.
 /iaskkeywords.
@@ -288,6 +289,7 @@ http://pv.zol.com.cn/images/
 http://pvstat.
 http://richmedia.
 http://shows.21cn.com/ashow?
+http://same.eastmoney.com/
 http://sinaad.proximic.cn/
 http://sortweb.chinatimes.com/
 http://spcode.
