--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -6,6 +6,7 @@
 .55.la/anonymous/banner/
 .56.com/images/tuiguang/200
 .5j5l.com/
+.788111.com/js/
 .888.ku6.com/fetch.do?
 .91adv.com/
 .91wan.com/
@@ -36,6 +37,7 @@
 .cn/adv/
 .cn/c.gif?
 .cn/DoubleClick/
+.cn/ggfiles/
 .cn/images/AD/
 .cn/images/ad/
 .cn/js.ng/
@@ -56,6 +58,7 @@
 .daynews.com.cn/zzbframe/
 .emarketing.com.cn/
 .emedia.cn/
+.fawan.com/hd/images/
 .feizl.com/ben/ben
 .focus.cn/fad/
 .gamania.com/ad
@@ -300,6 +303,7 @@ http://stat.tudou.com/
 http://stat.wauee.com/
 http://stat.zol.com.
 http://total.xinmin.cn/
+http://tongji.zgzqb.com/
 http://trace.qq.com/
 http://tw.analysis.
 http://udn.com/1024/AD/
