--- a/easylistfanboy/iron/adblock-chn.ini
+++ b/easylistfanboy/iron/adblock-chn.ini
@@ -54,6 +54,7 @@
 .com/a1.js
 .com/adpop/
 .com/pv.gif?
+.cs.com.cn/images_banner/
 .datamaster.com.cn/
 .daynews.com.cn/zzbframe/
 .emarketing.com.cn/
