--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: cP2KVfYpZ17lA1m9B6uc3A
-# Updated: 14 Aug 2010
+# Checksum: Vi0Emp5hXjsZRc8MpI3MmA
+# Updated: 15 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2274,6 +2274,7 @@
 /network_ad.
 /NeudesicAd.
 /newaff/float
+/newimplugs.
 /newscomaubusiness/css/promotions/
 /ngbn.net/
 /nps-growler/
