--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Vi0Emp5hXjsZRc8MpI3MmA
-# Updated: 15 Aug 2010
+# Checksum: 4C1l1POsNFUT3pqKDgu1pA
+# Updated: 16 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -2462,6 +2462,7 @@
 /slate_ad2.
 /SlideshowGallery.
 /slideshowintad?
+/some-ad.
 /smalltopl.swf
 /smartads.epl?
 /smartlinks.epl?
