--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 4C1l1POsNFUT3pqKDgu1pA
+# Checksum: KDk7sVgBnT5h91LQO6Bxtg
 # Updated: 16 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2881,6 +2881,7 @@ _682x90_
 _700_100_
 _700_150_
 _720x90.
+_720_90.
 _728-90_
 _72890.jpg
 _728_90.
