--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: KDk7sVgBnT5h91LQO6Bxtg
+# Checksum: Yi2pYTuKdZ/2l3gwAZ+9bw
 # Updated: 16 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3383,6 +3383,7 @@ http://filebase.to/gfx/
 http://fimserve.ign.com/
 http://flirtingsms.com/profileserver/
 http://forumimg.ipmart.com/SWF/
+http://forumw.org/images/uploading.gif
 http://friendfinder.
 http://frivol-ads.com/
 http://frontsight.com/images/banners/
