--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -400,6 +400,7 @@
 .msn.com/ro.aspx?
 .mtv.com/sitewide/droplets/
 .musicmass.
+.mvilivestats.com/
 .mycounter.ua/
 .myroitracking.com/
 .myspace.com/isf.gif?
