--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: Yi2pYTuKdZ/2l3gwAZ+9bw
+# Checksum: IWZ5oVPmBruPgJA4mizkhw
 # Updated: 16 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2462,10 +2462,10 @@
 /slate_ad2.
 /SlideshowGallery.
 /slideshowintad?
-/some-ad.
 /smalltopl.swf
 /smartads.epl?
 /smartlinks.epl?
+/some-ad.
 /sp/delivery/
 /spac_adx.js
 /spacedesc
@@ -2880,8 +2880,8 @@ _650x80_
 _682x90_
 _700_100_
 _700_150_
-_720x90.
 _720_90.
+_720x90.
 _728-90_
 _72890.jpg
 _728_90.
@@ -3195,6 +3195,7 @@ http://ads.trafficspaces.net/
 http://ads.tube1.com/
 http://ads.tweetmeme.com/
 http://ads.undertone.com/
+http://ads.uploading.com/
 http://ads.w3hoster.de/
 http://ads.xhamster.com/
 http://ads.yimg.
