--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -12,6 +12,7 @@
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
+.merikhabar.com/News/ads/
 .monsoonads.
 .net-filter.com/
 .netklix.com/
