--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: IWZ5oVPmBruPgJA4mizkhw
+# Checksum: zMR1HYDjc1rHgwyvzBf9YA
 # Updated: 16 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1315,7 +1315,9 @@
 /120600.
 /120_600.
 /120x240_
-/120x600
+/120x600.
+/120x600/
+/120x600_
 /125x125-
 /125x125/
 /125x125_
