--- a/easylistfanboy/iron/adblock-stats.ini
+++ b/easylistfanboy/iron/adblock-stats.ini
@@ -688,6 +688,8 @@
 .yandex.ru/count/
 .yelp.com/spice?
 .youramigo.com/
+.youtube-nocookie.com/gen_204?
+.youtube.com/s?
 .youtube.com/tracker
 .ytmnd.com/assets/images/blank.gif
 .zroitracker.com/
