--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: zMR1HYDjc1rHgwyvzBf9YA
-# Updated: 16 Aug 2010
+# Checksum: i7QlGV2fT+/4e322q/8W+g
+# Updated: 17 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1435,6 +1435,7 @@
 /80x468_
 /900x350_
 /960_60_
+/900x130_
 /985x120_
 /?adv_partner
 /_include/ads/
