--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: i7QlGV2fT+/4e322q/8W+g
+# Checksum: CA0dTsAi85lRrAp37ZKeYQ
 # Updated: 17 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2375,7 +2375,7 @@
 /publicidad_
 /publicidade/
 /pyv_watch_request_ad.
-/quickads.no/
+/quigo_ad
 /radioAdEmbed.
 /radioAdEmbedGenre.
 /radOpenx?
