--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: CA0dTsAi85lRrAp37ZKeYQ
+# Checksum: 0Ab+adPVXzB6jC4VeULrYQ
 # Updated: 17 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -2580,6 +2580,7 @@
 /whisperer/ads/
 /widget_ads?
 /WidgetAd.aspx?
+/wired/ads/
 /wp-content/ads/
 /wp-popup-scheduler/
 /wp-srv/ad/
