--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 0Ab+adPVXzB6jC4VeULrYQ
+# Checksum: OFMusfZSK51PNmIaJhV87Q
 # Updated: 17 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -1723,7 +1723,6 @@
 /ads_bg.
 /ads_iframe.
 /ads_php/
-/ads_v2.
 /ads_view.
 /ADSAdClient31.dll?
 /adscript.php?
