--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -9,6 +9,7 @@
 .com/images/advt/
 .com/player/ads/
 .economictimes.indiatimes.com/google_
+.hyperwebads.com/
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
 .indiadaily.com/leaderboard.
@@ -34,6 +35,7 @@
 /trackdirect.php?
 /trackLT.asp?
 http://ads.webindia123.com/
+http://contentxn.com/
 http://thinakkural.com/web_advers/
 http://www.lankasri.eu/clients/
 http://www.musicmaza.com/banner
