--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -17,6 +17,7 @@
 .monsoonads.
 .net-filter.com/
 .netklix.com/
+.samachar.com/730x90_
 .sensongs.com/NFls/
 .songs.pk/125body.
 .tamilisai.net/pub.
