--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -9,6 +9,7 @@
 .com/images/advt/
 .com/player/ads/
 .economictimes.indiatimes.com/google_
+.expressnews.lk/ad
 .hyperwebads.com/
 .in/ads/
 .indiadaily.com/editorial/leaderboard.
