--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -36,6 +36,7 @@
 /stats.php?
 /trackdirect.php?
 /trackLT.asp?
+/user_ads/
 http://ads.webindia123.com/
 http://contentxn.com/
 http://thinakkural.com/web_advers/
