--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -21,6 +21,7 @@
 .sensongs.com/NFls/
 .songs.pk/125body.
 .tamilisai.net/pub.
+.tamilkurinji.com/wanted_ads.
 .tamilveli.com/v2.0/ad/
 .vdopia.com/
 /ads_meenagam/
