--- a/easylistfanboy/iron/adblock-ind.ini
+++ b/easylistfanboy/iron/adblock-ind.ini
@@ -16,6 +16,7 @@
 .indiadaily.com/leaderboard.
 .monsoonads.
 .net-filter.com/
+.net/Ads/
 .netklix.com/
 .samachar.com/730x90_
 .sensongs.com/NFls/
