--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: OFMusfZSK51PNmIaJhV87Q
-# Updated: 17 Aug 2010
+# Checksum: yE1n8a/P7z0ptUG3tYAPqg
+# Updated: 18 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -1019,6 +1019,7 @@
 .privacyprotector.
 .privatamateure.com/
 .profitstat.biz/
+.promobenef.com/
 .program3.com/
 .projectwonderful.
 .pulse360.com/
