--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: yE1n8a/P7z0ptUG3tYAPqg
+# Checksum: 653mG29eW2hZArdm04Ka1A
 # Updated: 18 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3088,6 +3088,7 @@ http://ad.wsod.com/
 http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
+http://ad.sponsoreo.com/
 http://ad0.
 http://ad1
 http://ad2.
