--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 653mG29eW2hZArdm04Ka1A
+# Checksum: XxGZNTMtIw79Vp5WzTUpHw
 # Updated: 18 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3145,6 +3145,7 @@ http://ads.dailystar.com
 http://ads.digitalpoint.com/
 http://ads.drugs.com/
 http://ads.e-go.gr/
+http://ads.eagletribune.com/
 http://ads.focus-news.net/
 http://ads.gather.com/
 http://ads.glamourbabe.info/
@@ -3657,6 +3658,7 @@ http://void.flirt4e.com/
 http://vst.vstseed.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
+http://webads.
 http://web-adservice.com/
 http://webtraffic.ttinet.com/
 http://wendi.com/ipt/
