--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
 # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: XxGZNTMtIw79Vp5WzTUpHw
+# Checksum: 90XwT0bakcmJLzAsPi62NQ
 # Updated: 18 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -157,6 +157,7 @@
 .admarketplace.
 .admatik.pl/
 .admaxserver.com/
+.admaya.in/
 .adme.ru/
 .admeld.com/
 .admeta.
@@ -1019,9 +1020,9 @@
 .privacyprotector.
 .privatamateure.com/
 .profitstat.biz/
-.promobenef.com/
 .program3.com/
 .projectwonderful.
+.promobenef.com/
 .pulse360.com/
 .qksrv.net/
 .qksz.net/
@@ -1434,9 +1435,9 @@
 /760x90_
 /768x90.
 /80x468_
+/900x130_
 /900x350_
 /960_60_
-/900x130_
 /985x120_
 /?adv_partner
 /_include/ads/
@@ -3081,6 +3082,7 @@ http://ad.sensismediasmart.
 http://ad.sharethis.com/
 http://ad.slutload.com/
 http://ad.smart.ru/
+http://ad.sponsoreo.com/
 http://ad.terra.com
 http://ad.uk.doubleclick.net/ad
 http://ad.valuecalling.com/
@@ -3088,7 +3090,6 @@ http://ad.wsod.com/
 http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
-http://ad.sponsoreo.com/
 http://ad0.
 http://ad1
 http://ad2.
@@ -3658,8 +3659,8 @@ http://void.flirt4e.com/
 http://vst.vstseed.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
-http://webads.
 http://web-adservice.com/
+http://webads.
 http://webtraffic.ttinet.com/
 http://wendi.com/ipt/
 http://werbung.
