--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,6 +1,6 @@
-# Fanboy's Adblock list (Iron-Chrome)
-# Checksum: 90XwT0bakcmJLzAsPi62NQ
-# Updated: 18 Aug 2010
+ # Fanboy's Adblock list (Iron-Chrome)
+# Checksum: B3ET+sCp04gvOxEqwIE/2Q
+# Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
 &ad_number=
@@ -157,7 +157,6 @@
 .admarketplace.
 .admatik.pl/
 .admaxserver.com/
-.admaya.in/
 .adme.ru/
 .admeld.com/
 .admeta.
@@ -165,6 +164,7 @@
 .admob.com/
 .admonkey.dapper.net/
 .admpads.com/
+.admaya.in/
 .adnet.de/
 .adnet.vn/
 .adnxs.com/
@@ -316,12 +316,9 @@
 .axill.in/
 .azjmp.com/
 .azoogleads.
-.ban-ex.primiti.
 .bannerbank.
 .bannerborsasi.
 .bannerconnect.
-.banners-world.
-.baventures.
 .bbelements.com/
 .bbmedia.cz/
 .bbn.by/
@@ -1020,9 +1017,9 @@
 .privacyprotector.
 .privatamateure.com/
 .profitstat.biz/
+.promobenef.com/
 .program3.com/
 .projectwonderful.
-.promobenef.com/
 .pulse360.com/
 .qksrv.net/
 .qksz.net/
@@ -1435,9 +1432,9 @@
 /760x90_
 /768x90.
 /80x468_
-/900x130_
 /900x350_
 /960_60_
+/900x130_
 /985x120_
 /?adv_partner
 /_include/ads/
@@ -2532,6 +2529,7 @@
 /tmo/ads/
 /toigoogleads.
 /top_ad.
+/top_ads.
 /top_ad/
 /top_ad_
 /top_adv_
@@ -3082,7 +3080,6 @@ http://ad.sensismediasmart.
 http://ad.sharethis.com/
 http://ad.slutload.com/
 http://ad.smart.ru/
-http://ad.sponsoreo.com/
 http://ad.terra.com
 http://ad.uk.doubleclick.net/ad
 http://ad.valuecalling.com/
@@ -3090,6 +3087,7 @@ http://ad.wsod.com/
 http://ad.ytsa.net/
 http://ad.zanox.com/ppv/
 http://ad.zanox.com/tpv/
+http://ad.sponsoreo.com/
 http://ad0.
 http://ad1
 http://ad2.
@@ -3659,8 +3657,8 @@ http://void.flirt4e.com/
 http://vst.vstseed.com/
 http://vxhost.cn/google.js
 http://wamcash.com/tubes/
-http://web-adservice.com/
 http://webads.
+http://web-adservice.com/
 http://webtraffic.ttinet.com/
 http://wendi.com/ipt/
 http://werbung.
