--- a/easylistfanboy/iron/adblock-beta.ini
+++ b/easylistfanboy/iron/adblock-beta.ini
@@ -1,5 +1,5 @@
  # Fanboy's Adblock list (Iron-Chrome)
-# Checksum: B3ET+sCp04gvOxEqwIE/2Q
+# Checksum: EQDwiwXkr9lP8/bhV5hCvQ
 # Updated: 19 Aug 2010
 # License: http://creativecommons.org/licenses/by/2.5
 # Contact: mp3geek@gmail.com  http://fanboy.co.nz/adblock
@@ -3007,7 +3007,6 @@ bannerad_
 bannerid=
 bantex.ru/
 bravenetmedianetwork.
-budsinc.com/
 bunnypoker.com
 cams.com/go/
 cibleclick.
